# image-generator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: Home.py
app/pages/: 2_Gallery.py  3_Strategy_Lab.py  4_Training_Studio.py  5_Experiments.py  6_About.py
deploy/: Caddyfile  README.md  imggen.service  nginx.conf.example
docs/: architecture-deep-dive.md  article.md
src/image_generator/: __init__.py  config.py  logging.py
src/image_generator/backends/: __init__.py  base.py  fal.py  registry.py  replicate.py
src/image_generator/db/: __init__.py  connection.py  repository.py  schema.sql
src/image_generator/eval/: __init__.py  aesthetic.py  base.py  diversity.py  harness.py  identity.py  prompt.py
src/image_generator/lab/: __init__.py  runner.py
src/image_generator/models/: __init__.py  enums.py  requests.py  results.py  selfie.py
src/image_generator/services/: __init__.py  eval.py  generation.py  sweep.py  training.py
src/image_generator/storage/: __init__.py  base.py  local.py
src/image_generator/strategies/: __init__.py  catalog.py
src/image_generator/ui/: __init__.py  state.py
tests/: conftest.py  test_app_smoke.py  test_backends.py  test_db.py  test_eval.py  test_lab_runner.py  test_models.py  test_sweep.py
